--- a/vignettes/secsse_performance.Rmd
+++ b/vignettes/secsse_performance.Rmd
@@ -63,7 +63,7 @@ completely unloaded. Hence, here we do not actually perform the benchmark, but
 load the results directly from file:
 
 ```{r plot_results}
-data(timing_data, package = "secsse")
+load("timing_data.RData")
 
 ggplot(timing_data, aes(x = version, y = time, col = as.factor(num_threads))) +
   geom_boxplot() +
