less multi threading

--- a/vignettes/starting_secsse.Rmd
+++ b/vignettes/starting_secsse.Rmd
@@ -301,8 +301,7 @@ answ <- secsse::cla_secsse_ml(phy = phylo_vignette,
                               idparsfix = idparsfix,
                               parsfix = initparsfix,
                               sampling_fraction = sampling_fraction,
-                              verbose = FALSE,
-                              num_threads = 8)
+                              verbose = FALSE)
 ```
 
 We can now extract several pieces of information from the returned
@@ -420,8 +419,7 @@ answ <- secsse::cla_secsse_ml(phy = phylo_vignette,
                               idparsfix = idparsfix,
                               parsfix = initparsfix,
                               sampling_fraction = sampling_fraction,
-                              verbose = FALSE,
-                              num_threads = 8)
+                              verbose = FALSE)
 ML_CTD <- answ$ML
 CTD_par <- secsse::extract_par_vals(idparslist, answ$MLpars)
 ML_CTD
@@ -524,8 +522,7 @@ answ <- secsse::cla_secsse_ml(phy = phylo_vignette,
                               idparsfix = idparsfix,
                               parsfix = initparsfix,
                               sampling_fraction = sampling_fraction,
-                              verbose = FALSE,
-                              num_threads = 8)
+                              verbose = FALSE)
 ML_CR <- answ$ML
 CR_par <- secsse::extract_par_vals(idparslist, answ$MLpars)
 ML_CR
