--- a/vignettes/plotting_states.Rmd
+++ b/vignettes/plotting_states.Rmd
@@ -63,18 +63,19 @@ Here, the first four rows indicate the tip states, whilst the later three rows
 indicate the states at the internal nodes (with the last row indicating the root,
 in this case). The columns indicate the four extinction and four speciation rates,
 following the order in params[[1]] and params[[2]]. Thus, we have for both, rates
-0A, 1A, 0B and 1B. If we are interested in the posterior probability of trait 0,
+0A, 1A, 0B and 1B. Furthermore, the last four columns indicate the survival rates,
+which are equal to 1 - extinction. If we are interested in the posterior probability of trait 0,
 we have to provide a helper function that sums the probabilities of 0A and 0B, e.g.:
 ```{r helper function}
 helper_function <- function(x) {
-  return(sum(x[c(5, 7)]) / sum(x)) # normalized by total sum, just in case.
+  return(sum(x[c(5, 7)]) / sum(x[1:8])) # normalized by total sum, just in case.
 }
 ```
 
 We can now use this to plot this probability across the tree. There are two
 options for plotting: using the evaluations along the branches as used by the
 integration method, or evaluating the branch values at a specific number of intervals. 
-Using the explicit evaluations is more precies, but might be memory heavy. Usually,
+Using the explicit evaluations is more precise, but might be memory heavy. Usually,
 using 10-100 evaluations per branch provides a very accurate approximation:
 
 ```{r exact}
